--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -14,6 +14,7 @@
 // Specific project styles, add any section specific sass modules here
 @import "pages/layout";
 @import "pages/home";
+@import "pages/ux";
 
 // Additional styles to think about
 @import "base/responsive";
