--- a/css/main.css
+++ b/css/main.css
@@ -388,8 +388,28 @@ hr {
       margin-bottom: 15px; }
 
 /* Larger than mobile */
+@media (min-width: 400px) {
+  .ux .container {
+    text-align: center; }
+    .ux .container p {
+      font-size: 0.8em;
+      margin-bottom: 20px; }
+    .ux .container .screen {
+      display: inline-block; }
+      .ux .container .screen img {
+        width: 70%; } }
+
 /* Larger than phablet */
 /* Larger than tablet */
+@media (min-width: 750px) {
+  .ux .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    .ux .container .screen {
+      width: 21.25%; } }
+
 /* Larger than desktop */
 /* Larger than Desktop HD */
 @media screen and (max-width: 480px) {
