--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -27,11 +27,29 @@
 			}
 		}
 	}
+
 }
 
 /* Larger than mobile */
 @media (min-width: 400px) {
+	.ux {
+		.container {
+			text-align: center;
+			p {
+				font-size: 0.8em;
+				margin-bottom: 20px;
+			}
 
+			.screen {
+				// float: left;
+				display: inline-block;
+				img {
+					width: 70%;
+				}
+
+			}
+		}
+	}
 }
 
 /* Larger than phablet */
@@ -41,7 +59,17 @@
 
 /* Larger than tablet */
 @media (min-width: 750px) {
-
+	.ux {
+		.container {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			.screen {
+			width: 21.25%;
+			}
+		}
+	}
 }
 
 /* Larger than desktop */
