--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -22,7 +22,7 @@
 				margin-bottom: 10px;
 			}
 			img {
-				width: 70%;
+				width: 90%;
 				margin-bottom: 15px;
 			}
 		}
@@ -44,7 +44,7 @@
 				// float: left;
 				display: inline-block;
 				img {
-					width: 70%;
+					width: 90%;
 				}
 
 			}
@@ -66,7 +66,10 @@
 			left: 50%;
 			transform: translate(-50%, -50%);
 			.screen {
-			width: 21.25%;
+				width: 21.25%;
+			}
+			.screen:first-child{
+				margin-left: 0;
 			}
 		}
 	}
@@ -80,27 +83,3 @@
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
 
-
-// .ux {
-// 	background: $salmon;
-
-// 	.container {
-// 		position: absolute;
-// 		top: 50%;
-// 		left: 50%;
-// 		transform: translate(-50%, -50%);
-
-// 		.screen {
-// 			text-align: center;
-// 			float: left;
-// 			width: 21.25%;
-// 			margin-left: 3%;
-// 			img {
-// 				width: 95%;
-// 			}
-// 		}
-// 		.screen:first-child{
-// 			margin-left: 0;
-// 		}
-// 	}
-// }
