--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -44,6 +44,8 @@ $dark-blue: #2b2769;
 $light-blue: #33b2ff;
 $pink: #F15FA8;
 $reverse: #fff;
+$warm-grey: #1D2831;
+$cobolt-blue: #0176EA;
 
 /* util colors */
 $danger-color: $red; // Bad color for errors, validation etc.
