--- a/css/sass/components/_other.scss
+++ b/css/sass/components/_other.scss
@@ -53,3 +53,13 @@ hr {
 .relative {
   position: relative;
 }
+
+// Center content vertically and horizontally
+
+.center-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
