--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -15,6 +15,7 @@
 @import "pages/layout";
 @import "pages/home";
 @import "pages/ux";
+@import "pages/interactive";
 
 // Additional styles to think about
 @import "base/responsive";
