--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -10,11 +10,6 @@
 			img {
 			width: 50%;
 			}
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			text-align: center;
 		}
 
 		h1, p {
@@ -23,10 +18,13 @@
 		h1 {
 			font-size: 1.5em;
 			margin: 10px;
+			font-family: $bold;	
+    	text-transform: uppercase;
 		}
 		p {
 			font-size: 0.9em;
 			margin: 0 20px 20px;
+			font-family: $medium;
 		}
 	}
 
