--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -20,6 +20,8 @@
 		.screen {
 			h5 {
 				margin-bottom: 10px;
+				text-transform: uppercase;
+				font-family: $medium;
 			}
 			img {
 				width: 90%;
@@ -61,10 +63,6 @@
 @media (min-width: 750px) {
 	.ux {
 		.container {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
 			.screen {
 				width: 21.25%;
 			}
