--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ hr {
       text-transform: uppercase;
       font-family: Gotham_medium, sans-serif; }
     .ux .container .screen img {
-      width: 90%;
+      width: 70%;
       margin-bottom: 15px; }
 
 /* Larger than mobile */
@@ -371,10 +371,15 @@ hr {
 /* Larger than phablet */
 /* Larger than tablet */
 @media (min-width: 750px) {
-  .ux .container .screen {
-    width: 21.25%; }
-  .ux .container .screen:first-child {
-    margin-left: 0; } }
+  .ux .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    .ux .container .screen {
+      width: 21.25%; }
+    .ux .container .screen:first-child {
+      margin-left: 0; } }
 
 /* Larger than desktop */
 /* Larger than Desktop HD */
