--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -24,7 +24,7 @@
 				font-family: $medium;
 			}
 			img {
-				width: 90%;
+				width: 70%;
 				margin-bottom: 15px;
 			}
 		}
@@ -43,7 +43,6 @@
 			}
 
 			.screen {
-				// float: left;
 				display: inline-block;
 				img {
 					width: 90%;
@@ -63,6 +62,10 @@
 @media (min-width: 750px) {
 	.ux {
 		.container {
+		  position: absolute;
+		  top: 50%;
+		  left: 50%;
+		  transform: translate(-50%, -50%);
 			.screen {
 				width: 21.25%;
 			}
