--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -16,6 +16,7 @@
 @import "pages/home";
 @import "pages/ux";
 @import "pages/interactive";
+@import "pages/prototype";
 
 // Additional styles to think about
 @import "base/responsive";
