--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -3,8 +3,8 @@
 
 /* Mobile first queries */
 
-.ux {
-	background: $salmon;
+.prototype {
+	background: $cobolt-blue;
 
 
 }
@@ -31,6 +31,6 @@
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {
-	
+
 }
 
