--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -26,6 +26,10 @@
 			margin: 0 20px 20px;
 			font-family: $medium;
 		}
+		.social-main {
+			visibility: hidden;
+		}
+
 	}
 
 /* Larger than mobile */
@@ -75,7 +79,28 @@
 		.container img {
 			width: 25%;
 		}
+		.social-main {
+			visibility: visible;
+			position: absolute;
+			right: 2%;
+			bottom: 2%;
+			.contact,
+			.contact-item {
+				text-transform: uppercase;
+				font-family: $body;
+				font-size: 14px;
+				color: $salmon;
+				margin-left: 5px;
+			}
+			.contact {
+				margin-right: 5px;
+			}
+			.contact-item:hover {
+				color: $reverse;
+			}
+		}
 	}
+
 }
 
 /* Larger than Desktop HD */
