--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -53,3 +53,5 @@ $success-color: $green; // Good color for success etc.
 $info-color: $blue; // Good color for success etc.
 $warning-color: $orange; // Good color for success etc.
 $subtle-color: $grey; // Subtle color for subtle text
+
+/* global background color */
