--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -1,11 +1,20 @@
-
+// GOTHAM
 @font-face { font-family: Gotham_black; src: url(../fonts/GOTHAM-BLACK.TTF);}
 @font-face { font-family: Gotham_medium; src: url(../fonts/GOTHAM-MEDIUM.TTF);}
 @font-face { font-family: Gotham_thin; src: url(../fonts/GOTHAM-LIGHT.TTF);}
 
+// AVANTGARDE
+@font-face { font-family: avant_book; src: url(../fonts/ITCAvantGardePro-Bk.otf);}
+@font-face { font-family: avant_medium; src: url(../fonts/ITCAvantGardePro-Md.otf);}
+@font-face { font-family: avant_bold; src: url(../fonts/ITCAvantGardePro-Bold.otf);}
+
 $body: Gotham_thin, sans-serif;
 $medium: Gotham_medium, sans-serif;
 $bold: Gotham_black, sans-serif;
+
+$body_avant: avant_book, sans-serif;
+$medium_avant: avant_medium, sans-serif;
+$bold_avant: avant_bold, sans-serif;
 
 body {
   font-family: $body, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
