--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 /* Colors */
 /* project colors */
 /* util colors */
+/* global background color */
 .clearfix,
 .group {
   zoom: 1; }
@@ -91,6 +92,18 @@
 @font-face {
   font-family: Gotham_thin;
   src: url(../fonts/GOTHAM-LIGHT.TTF); }
+
+@font-face {
+  font-family: avant_book;
+  src: url(../fonts/ITCAvantGardePro-Bk.otf); }
+
+@font-face {
+  font-family: avant_medium;
+  src: url(../fonts/ITCAvantGardePro-Md.otf); }
+
+@font-face {
+  font-family: avant_bold;
+  src: url(../fonts/ITCAvantGardePro-Bold.otf); }
 
 body {
   font-family: Gotham_thin, sans-serif, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -295,12 +308,6 @@ hr {
   .pulse .pulse-button {
     stroke: #E94444; }
 
-/* HOME */
-/* INTERACTIVE DESIGN */
-/* PROTOTYPE */
-/* GRAPHIC DESIGN */
-/* PHOTOGRAPHY */
-/* CONTACT */
 /* Homepage - Main Laning page */
 /* Mobile first queries */
 .main-landing-page {
@@ -415,17 +422,31 @@ hr {
 /* Interactiive */
 /* Mobile first queries */
 .interactive {
-  background: #1D2831; }
+  background: #2b2769; }
   .interactive #bison-logo {
     width: 70%;
     fill: transparent;
-    stroke: #0176EA;
-    transform: translateY(15px); }
+    stroke: #E94444;
+    transform: translateY(15px);
+    display: none; }
 
 /* Larger than mobile */
 /* Larger than phablet */
 /* Larger than tablet */
 /* Larger than desktop */
+@media (min-width: 1000px) {
+  .container h1, .container p {
+    color: #E94444; }
+  .container h1 {
+    font-size: 4.2em;
+    font-family: avant_bold, sans-serif;
+    line-height: 90%; }
+  .container p {
+    font-size: 1.1em;
+    font-family: avant_medium, sans-serif;
+    text-transform: uppercase;
+    line-height: 105%; } }
+
 /* Larger than Desktop HD */
 /* UX - Prototype */
 /* Mobile first queries */
