--- a/css/sass/pages/_interactive.scss
+++ b/css/sass/pages/_interactive.scss
@@ -46,6 +46,12 @@
 			text-transform: uppercase;
 			line-height: 105%;
 		}
+		#interactive-heading {
+			opacity: 0;
+		}
+		#interactive-para {
+			opacity: 0;
+		}
 	}
 }
 
