try and fixed greensock stuff

--- a/css/main.css
+++ b/css/main.css
@@ -432,8 +432,7 @@ hr {
     width: 70%;
     fill: transparent;
     stroke: #E94444;
-    transform: translateY(15px);
-    display: none; }
+    transform: translateY(15px); }
 
 /* Larger than mobile */
 /* Larger than phablet */
@@ -450,11 +449,7 @@ hr {
     font-size: 1.1em;
     font-family: avant_medium, sans-serif;
     text-transform: uppercase;
-    line-height: 105%; }
-  .container #interactive-heading {
-    opacity: 0; }
-  .container #interactive-para {
-    opacity: 0; } }
+    line-height: 105%; } }
 
 /* Larger than Desktop HD */
 /* UX - Prototype */
