--- a/css/main.css
+++ b/css/main.css
@@ -435,34 +435,33 @@ hr {
 /* Larger than phablet */
 /* Larger than tablet */
 @media (min-width: 750px) {
-  .ux .ux-slide-01 {
+  .ux .ux-slide-01 .wrapper-container {
+    display: flex;
+    background: blue; }
+  .ux .ux-slide-01 .flex {
+    height: 500px;
+    min-width: 100px; }
+  .ux .ux-slide-01 .ux-image {
+    background: yellow;
+    flex-grow: 1; }
+  .ux .ux-slide-01 .ux-slide01-text {
+    flex-grow: 2;
+    background: green;
+    text-align: left; }
+    .ux .ux-slide-01 .ux-slide01-text p {
+      text-transform: none;
+      font-family: avant_book, sans-serif;
+      line-height: 150%; }
+  .ux-slide-02 {
     position: relative; }
-    .ux .ux-slide-01 .container {
+    .ux-slide-02 .container {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); }
-      .ux .ux-slide-01 .container img {
-        width: 25%;
-        float: left;
-        margin-right: 30px; }
-      .ux .ux-slide-01 .container .ux-slide01-text {
-        margin-top: 100px;
-        text-align: left; }
-        .ux .ux-slide-01 .container .ux-slide01-text p {
-          text-transform: none;
-          font-family: avant_book, sans-serif;
-          line-height: 150%; }
-  .ux .ux-slide-02 {
-    position: relative; }
-    .ux .ux-slide-02 .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); }
-      .ux .ux-slide-02 .container .screen {
+      .ux-slide-02 .container .screen {
         width: 21.25%; }
-      .ux .ux-slide-02 .container .screen:first-child {
+      .ux-slide-02 .container .screen:first-child {
         margin-left: 0; } }
 
 /* Larger than desktop */
