add flexbox to UX page

--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -72,7 +72,7 @@ html.fp-enabled,
     margin-top: -38px;
     transform: translate3d(0,0,0);
 }
-.fp-controlArrow.fp-prev {
+/*.fp-controlArrow.fp-prev {
     left: 15px;
     width: 0;
     border-width: 38.5px 34px 38.5px 0;
@@ -82,7 +82,7 @@ html.fp-enabled,
     right: 15px;
     border-width: 38.5px 0 38.5px 34px;
     border-color: transparent transparent transparent #fff;
-}
+}*/
 .fp-scrollable {
     overflow: hidden;
     position: relative;
