--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Consistent settings */
 /* Colors */
 /* project colors */
@@ -35,9 +34,6 @@ html {
   content: "";
   display: table;
   clear: both; }
-
-.row {
-  /*overflow: hidden;*/ }
 
 .column {
   width: 100%;
@@ -108,7 +104,8 @@ html {
   font-family: avant_bold;
   src: url(../fonts/ITCAvantGardePro-Bold.otf); }
 
-body {
+body,
+p {
   font-family: Gotham_thin, sans-serif, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 100%;
   font-style: normal;
@@ -192,8 +189,8 @@ a {
     margin-bottom: 10px;
     width: 100%; } }
 
-/* Navigation
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* NAVIGATION
+   ========================================================================== */
 .logo {
   position: fixed;
   top: 10px;
@@ -228,7 +225,9 @@ nav {
 .main-nav-hide {
   display: none; }
 
-/*Hamburger Toggle*/
+/**
+ * HAMBURGER TOGGLE MENU
+ */
 .navbar-toggle {
   position: fixed;
   top: 20px;
@@ -248,7 +247,11 @@ nav {
       margin-bottom: 6px;
       transform: translateX(10px); }
 
-/* personal text for all pages */
+/* FOOTER ELEMENTS
+   ========================================================================== */
+/**
+ * PERSONAL PORTFOLIO WATERMARK
+ */
 .watermark-text {
   font-size: .4em;
   color: #E94444;
@@ -262,10 +265,15 @@ nav {
   .watermark-text .rath {
     font-family: avant_bold, sans-serif; }
 
-/* social media bar */
+@media (max-width: 400px) {
+  .watermark-text {
+    visibility: hidden; } }
+
+/**
+ * SOCIAL/CONTACT BAR AT RIGHTHAND CORNER OF PAGE
+ */
 .social-main {
   z-index: 101;
-  visibility: visible;
   position: absolute;
   right: 2%;
   bottom: 2%; }
@@ -281,12 +289,18 @@ nav {
   .social-main .contact-item:hover {
     color: #fff; }
 
-/*sidebar navigation*/
+@media (max-width: 400px) {
+  .social-main {
+    visibility: hidden; } }
+
+/**
+ * RIGHT VERTICAL NAV BAR
+ * Have turned off for now
+ */
 #fp-nav ul li a span, .fp-slidesNav ul li a span {
   background: #E94444;
   display: none; }
 
-/*slide navigation*/
 * {
   box-sizing: border-box !important; }
 
@@ -399,83 +413,65 @@ hr {
       top: 83px; } }
 
 /* Larger than Desktop HD */
-/* UX - User Experience */
-/* Mobile first queries */
+/* USER EXPERIENCE SECTION
+   ========================================================================== */
+/**
+ * MOBILE FIRST QUERIES
+ */
+.ux {
+  text-align: center;
+  background: #E94444; }
+  .ux h1 {
+    font-size: 1.5em;
+    font-family: Gotham_medium, sans-serif;
+    text-transform: uppercase; }
+  .ux p {
+    font-size: 0.7em;
+    margin: 0 1em 2em; }
+
 .ux-slide-01 .wrapper-container {
-  text-align: center; }
+  display: flex;
+  flex-direction: column; }
   .ux-slide-01 .wrapper-container .ux-image {
-    width: 45%;
+    width: 35%;
     margin: 100px auto 0; }
     .ux-slide-01 .wrapper-container .ux-image img {
       width: 100%; }
-  .ux-slide-01 .wrapper-container .ux-slide01-text button {
-    width: 120px;
-    height: 40px;
-    background: rgba(255, 255, 255, 0.1);
-    border: none;
-    border-radius: 20px; }
 
-.ux {
-  background: #E94444; }
-  .ux .placeholder-height {
-    height: 100px; }
-  .ux .container {
-    text-align: center; }
-    .ux .container h1,
-    .ux .container p {
-      color: #fff; }
-    .ux .container p {
-      font-size: 0.8em;
-      margin-bottom: 20px; }
-    .ux .container .screen h5 {
-      margin-bottom: 10px;
-      text-transform: uppercase;
-      font-family: Gotham_medium, sans-serif; }
-    .ux .container .screen img {
-      width: 70%;
-      margin-bottom: 15px; }
+.placeholder-height {
+  height: 100px; }
+
+.ux-slide-02 .container .screen h5 {
+  margin-bottom: 10px; }
+
+.ux-slide-02 .container .screen img {
+  width: 60%;
+  margin-bottom: 15px; }
 
 /* Larger than mobile */
 @media (min-width: 400px) {
-  .ux .container {
-    text-align: center; }
-    .ux .container p {
-      font-size: 0.8em;
-      margin-bottom: 20px; }
-    .ux .container .screen {
-      display: inline-block; }
-      .ux .container .screen img {
-        width: 90%; } }
+  .ux-slide-02 .container p {
+    font-size: 0.8em;
+    margin-bottom: 20px; }
+  .ux-slide-02 .container .screen {
+    display: inline-block; }
+    .ux-slide-02 .container .screen img {
+      width: 90%; } }
 
 /* Larger than phablet */
 /* Larger than tablet */
 @media screen and (min-width: 750px) {
   .ux-slide-01 {
     display: flex; }
-  .wrapper-container {
-    display: flex;
-    width: 960px;
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: center; }
-    .wrapper-container .ux-image {
-      flex: 1 1 1%; }
-      .wrapper-container .ux-image img {
-        width: 100%; }
-    .wrapper-container .ux-slide01-text {
-      text-align: left;
-      margin-left: 20px;
-      flex: 1 1 50%; }
-      .wrapper-container .ux-slide01-text h1 {
-        font-size: 3em; }
-      .wrapper-container .ux-slide01-text p {
-        font-size: 1em; }
-      .wrapper-container .ux-slide01-text button {
-        width: 120px;
-        height: 40px;
-        background: rgba(255, 255, 255, 0.1);
-        border: none;
-        border-radius: 20px; }
+    .ux-slide-01 .wrapper-container {
+      flex-direction: row;
+      max-width: 960px;
+      margin: 0 auto;
+      align-items: center; }
+      .ux-slide-01 .wrapper-container .ux-image {
+        flex: 1; }
+      .ux-slide-01 .wrapper-container .ux-slide01-text {
+        flex: 3; }
   .ux .ux-slide-02 {
     position: relative; }
     .ux .ux-slide-02 .container {
@@ -506,13 +502,13 @@ hr {
 /* Larger than tablet */
 /* Larger than desktop */
 @media (min-width: 1000px) {
-  .container h1, .container p {
+  .interactive h1, .interactive p {
     color: #E94444; }
-  .container h1 {
+  .interactive h1 {
     font-size: 4.2em;
     font-family: avant_bold, sans-serif;
     line-height: 90%; }
-  .container p {
+  .interactive p {
     font-size: 1.1em;
     font-family: avant_medium, sans-serif;
     text-transform: uppercase;
