--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -16,7 +16,8 @@ $body_avant: avant_book, sans-serif;
 $medium_avant: avant_medium, sans-serif;
 $bold_avant: avant_bold, sans-serif;
 
-body {
+body, 
+p {
   font-family: $body, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 100%;
   font-style: normal;
