--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -1,6 +1,7 @@
 
-/* Navigation
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* NAVIGATION
+   ========================================================================== */
+
 .logo {
 	position: fixed;
 	top: 10px;
@@ -30,14 +31,14 @@ nav {
 		left: 50%;
 		transform: translate(-50%, -50%);
 
-			li {
-				list-style: none;
-					a {
-						font-size: 35px;
-						text-decoration: none;
-						color: inherit;
-					}
+		li {
+			list-style: none;
+			a {
+				font-size: 35px;
+				text-decoration: none;
+				color: inherit;
 			}
+		}
 	}
 }
 
@@ -45,7 +46,9 @@ nav {
 	display: none;
 }
 
-/*Hamburger Toggle*/
+/**
+ * HAMBURGER TOGGLE MENU
+ */
 
 .navbar-toggle {
 	position: fixed;
@@ -71,11 +74,15 @@ nav {
 	 	 	transform: translateX(10px)
 		}
 	}
-
-
 }
 
-/* personal text for all pages */
+/* FOOTER ELEMENTS
+   ========================================================================== */
+
+/**
+ * PERSONAL PORTFOLIO WATERMARK
+ */
+
 .watermark-text {
 	font-size: .4em;
 	color: $salmon;
@@ -93,10 +100,19 @@ nav {
 	}
 }
 
-/* social media bar */
+// **********
+@media (max-width: 400px) {
+	.watermark-text {
+		visibility: hidden;
+	}
+}
+
+/**
+ * SOCIAL/CONTACT BAR AT RIGHTHAND CORNER OF PAGE
+ */
+
 .social-main {
 	z-index: 101;
-	visibility: visible;
 	position: absolute;
 	right: 2%;
 	bottom: 2%;
@@ -115,15 +131,22 @@ nav {
 		color: $reverse;
 	}
 }
+// **********
+@media (max-width: 400px) {
+	.social-main {
+		visibility: hidden;
+	}
+}
 
-
-/*sidebar navigation*/
+/**
+ * RIGHT VERTICAL NAV BAR
+ * Have turned off for now
+ */
 
 #fp-nav ul li a span, .fp-slidesNav ul li a span {
 		background: $salmon;
 		display: none;
 	}
 
-/*slide navigation*/
 
 
